--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,9 +3,13 @@ body {
   padding: 0;
 }
 
+#wrapper {
+  position: relative;
+  margin: 0 auto;
+  width: 768px;
+}
+
 img {
   display: block;
-  margin: 0 auto;
   width: 100%;
-  max-width: 768px;
 }
