--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,8 +3,9 @@ body {
   padding: 0;
 }
 
-#wrapper {
+.wrapper {
   position: relative;
+  overflow: hidden;
   margin: 0 auto;
   width: 768px;
 }
@@ -12,4 +13,9 @@ body {
 img {
   display: block;
   width: 100%;
+}
+
+a {
+  position: absolute;
+  border: 1px solid red;
 }
