--- a/views/index.html
+++ b/views/index.html
@@ -6,29 +6,11 @@
 
 {% block content %}
   <div class="content">
-    <h1>Design</h1>
+    <h1>Day surgery prototypes</h1>
 
-    <h2>Symptoms</h2>
     <ul>
-      <li><a href="/symptoms/headache">Headache</a></li>
-      <li><a href="/symptoms/stomach-ache">Stomach ache</a></li>
-      <li><a href="/symptoms/rashes">Rashes in children</a></li>
-    </ul>
-
-    <h2>Conditions</h2>
-    <ul>
-      <li><a href="/conditions/head-lice">Head lice</a></li>
-      <li><a href="/conditions/fungal-nail-infection">Fungal nail infection</a></li>
-      <li><a href="/conditions/hand-foot-and-mouth-disease">Hand foot and mouth disease</a></li>
-      <li><a href="/conditions/shingles">Shingles</a></li>
-      <li><a href="/conditions/warts">Warts</a></li>
-      <li><a href="/conditions/depression-and-anxiety/how-to-tell-if-you-have-it">Depression</a></li>
-      <li><a href="/conditions/type-2-diabetes/check-if-you-have-it">Diabetes</a></li>
-    </ul>
-
-    <h2>Feedback mechanism</h2>
-    <ul>
-      <li><a href="/feedback/feedback-example">Feedback example</a></li>
+      <li><a href="/symptoms/headache">V2.0 - Day surgery guide hernia </a></li>
+      <li><a href="/hernia/guide-surgery">V3.0 - Day surgery guide hernia </a></li>
     </ul>
 
   </div>
