--- a/assets/scss/modules/header-global/_header-global.scss
+++ b/assets/scss/modules/header-global/_header-global.scss
@@ -1,6 +1,5 @@
 #global-header {
-  background-color: $nhs-blue;
-  border-bottom: 1px solid rgba(255,255,255,0.2);
+  border-bottom: 4px solid $nhs-blue;
 }
 
 .header-container {
