--- a/assets/scss/modules/typography/_links.scss
+++ b/assets/scss/modules/typography/_links.scss
@@ -10,3 +10,15 @@ a:hover {
 a:visited {
     color: $visited-link-colour;
 }
+
+a.on-blue {
+        color: $white;
+}
+
+a.on-blue:hover {
+    color: $hover-link-colour;
+}
+
+a.on-blue:visited {
+    color: $visited-link-colour;
+}
