--- a/views/_includes/footer-global.html
+++ b/views/_includes/footer-global.html
@@ -1,15 +1,21 @@
 <footer id="global-footer" role="contentinfo">
   <div class="footer-container">
-    <nav>
-      <ul>
-        <li><a href="/help/cookies">Cookies</a></li>
-        <li><a href="/help/clinical-assurance">Clinical assurance</a></li>
-      </ul>
-    </nav>
+    <div class="footer-logo">
+      <a href="/" class="header-logo" title="Go to the NHS.UK homepage">
+        <img src="/images/nhs-logotype-white.svg" alt="NHS" width="79" height="32" />
+      </a>
+    </div>
 
-    <p>
+      <nav>
+          <ul>
+            <li><a class="on-blue smallprint" href="/help/cookies">Cookies</a></li>
+            <li><a class="on-blue smallprint" href="/help/clinical-assurance">Clinical assurance</a></li>
+          </ul>
+        </nav>
+
+    <p class="smallprint">
       &copy; Crown copyright<br>
-      Content available under <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0.</a>
+      Content available under <a class="on-blue" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0.</a>
     </p>
   </div>
 </footer>
