--- a/views/_layouts/_layout-default.html
+++ b/views/_layouts/_layout-default.html
@@ -16,7 +16,7 @@
 {% include "_includes/header-global.html" %}
 
 <main>
-  {% block localheader %}{% endblock %}
+  <!-- {% block localheader %}{% endblock %} -->
   {% block content %}{% endblock %}
 </main>
 
