--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -20,62 +20,54 @@
 
   <div class="grid-row">
 
+    <div class="grid-1-3">
+    <p>Nav panel in here</p>
+    </div>
+
     <div class="grid-2-3">
 
-      <h2 class="heading-xlarge">Treating headaches at home</h2>
-      <p>You can simply wait until the headache goes away or take painkillers
-        like paracetamol or ibuprofen. You can buy these over the counter.</p>
-      <p>Headaches can last between 30 minutes and several hours.</p>
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">1. Booking a hospital appointment with the surgeon</h2>
+      <p>Your GP might book your first appointment with the surgeon for you. If they don’t, you’ll get a letter with a reference number to book online or over the phone.</p>
+      <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
+      
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">2. Seeing a surgeon</h2>
+      <p>The surgeon will explain what treatment options you have, and the benefits and risks of surgery. You can ask them any questions. This is the time when you decide if you want to go ahead with the operation.</p>
 
-      <p>It will also help to:</p>
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">3. Confirming your surgery date</h2>
+      <p>After your appointment with the surgeon you’ll get a letter confirming the date of your operation.</p>
+      <p>You can change the date but you might have to wait several weeks to get a new one.</p>
+
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">4. Checking your are fit for surgery</h2>
+      <p>If you’re having a general anaesthetic, you’ll have an appointment with a nurse at the hospital to make sure you’re healthy enough for surgery. This is called a pre-operative assessment or pre-op.</p>
+      <p>If you’re not healthy enough, the operation may be postponed.</p>
+      <p><a href="#">Preparing for your pre-operative assessment appointment</a></p>
+
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">5. Getting ready for surgery</h2>
+      <p>The nurse will tell you how to prepare for the operation. You might have to do things like change or stop taking your medicine.</p>
+      <p>On the morning of your surgery, you should:</p>
       <ul>
-        <li>drink plenty of water</li>
-        <li>eat regular meals</li>
-        <li>sleep the same amount of hours every night</li>
+        <li>have a bath or shower</li>
+        <li>remove all jewellery, including any piercings </li>
       </ul>
-
-      <hr>
-
-      <p>Many things cause headaches, for example:</p>
-      <ul>
-        <li>colds and flu</li>
-        <li>bad posture</li>
-        <li>stress</li>
-        <li>periods or menopause (hormone headaches)</li>
-      </ul>
-
-      <div class="callout gp">
-        <h2 class="heading">When to see a GP:</h2>
-        <ul>
-          <li>you have a bad throbbing pain at the front or side of your head </li>
-          <li>you feel sick, vomit and find light or noise painful</li>
-          <li>
-            you see flashing lights when the headache starts &mdash; this might be
-            <a href="http://www.nhs.uk/Conditions/Migraine/Pages/Introduction.aspx">migraine</a>
-            or <a href="http://www.nhs.uk/conditions/cluster-headaches/Pages/Introduction.aspx">cluster headaches</a>
-          </li>
-        </ul>
+      <div class="callout notice">
+        <p>On the morning of the surgery you must not eat after midnight, and not drink after 6am.</p>
       </div>
 
-    </div>
-    <div class="grid-1-3">
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">6. Day of your surgery</h2>
+      <p>When you arrive at the hospital go to the reception desk at your ward. Bring the letter with the confirmation of your surgery date with you.</p>
+      <p><a href="#">The day of your surgery</a></p>
 
-      <div class="callout aside emergency">
-        <h2 class="heading">Call 999 or go to <abbr title="Accident and Emergency">A&amp;E</abbr> now if:</h2>
-        <p>You hurt your head badly, eg from a fall or accident.</p>
-        <p>It feels like the worst pain you’ve ever had and came on suddenly.</p>
-        <p>You have a severe headache and:</p>
-        <ul>
-          <li>sudden problems speaking, remembering things</li>
-          <li>blurred vision</li>
-          <li>are feeling drowsy, confused</li>
-          <li>high fever</li>
-          <li>stiff neck</li>
-          <li>rash</li>
-          <li>redness in one of your eyes</li>
-          <li>jaw pain when chewing</li>
-        </ul>
-      </div>
+      <div class="content-seperator"></div>
+      <h2 class="heading-xlarge">7. Going home and recovery</h2>
+      <p>You can go home when you feel well enough, and can eat and drink. You must be able to walk (if you’re not in a wheelchair), and pee.</p>
+      <p>You’ll need someone to help you home by car or taxi and stay with you for at least 24 hours. </p>
+      <p><a href="#">Going home and recovery</a></p>
 
     </div>
 
@@ -83,16 +75,4 @@
 
 </div> <!-- content -->
 
-<div class="row-blue">
-  <div class="content">
-    <div class="grid-row">
-      <div class="grid-2-3">
-        <div class="callout oneoneone">
-          <h2 class="heading">Still not sure what to do?</h2>
-          <p>If you need help deciding what to do next, call 111.</p>
-        </div>
-      </div>
-    </div><!-- end row -->
-  </div>
-</div>
 {% endblock %}
