--- a/assets/scss/modules/footer-global/_footer-global.scss
+++ b/assets/scss/modules/footer-global/_footer-global.scss
@@ -3,8 +3,8 @@ html {
 }
 
 #global-footer {
-  border-top: 1px solid $grey-2;
-  background-color: $light-grey;
+  border-top: 4px solid rgba($dark-blue, 0.4);
+  background-color: $nhs-blue;
 }
 
 .footer-container {
@@ -14,20 +14,27 @@ html {
   padding-top: $leading*3;
   padding-bottom: $leading*6;
 
+  p {
+    color: #fff;
+  }
+
   nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: $white;
 
     li {
-      display: inline;
+      margin: 0;
 
-      &:after {
-        content: ' /';
-      }
       &:last-child:after {
         content: '';
       }
     }
   }
 }
+
+.footer-logo {
+   display: inline-block;
+   margin-bottom: $leading*4;
+ }
