--- a/assets/scss/variables/_colours.scss
+++ b/assets/scss/variables/_colours.scss
@@ -24,8 +24,9 @@ $yellow2: #FFB81C;
 $yellow-dark: #cc9316;
 
 $red: #D81E05;
+$red-dark: shade($red, 20%) ;
 $green: #76BD18;
-$dark-green: #6AAB20;
+$green-dark: #6AAB20;
 $feedback-button-green: #417505;
 
 $grey: #e6e6e6;
