--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -1,18 +1,7 @@
 {% extends "_layouts/_layout-default.html" %}
 
-{% set pagetitle = "Headache" %}
+{% set pagetitle = "Hernia surgery - 7 steps to get you through surgery" %}
 
-{% block localheader %}
-  <div id="local-header">
-    <div class="header-local-container">
-      <h1>{{ pagetitle }}</h1>
-      <div class="measure">
-        <p class="lede">Most headaches will go away on their own and aren’t a
-          sign of something more serious.</p>
-      </div>
-    </div>
-  </div>
-{% endblock %}
 
 {% block content %}
 
@@ -21,32 +10,46 @@
   <div class="grid-row">
 
     <div class="grid-1-3">
-    <p>Nav panel in here</p>
+      <div class="header-panel">
+        <h2 class="header">Hernia Surgery</h2>
+        <div class="content-seperator"></div>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#01" class="link">Booking a hospital appointment with  the surgeon</a></li>
+          <li class="nav-item"><a href="#02" class="link">Seeing the surgeon</a></li>
+          <li class="nav-item"><a href="#03" class="link">Confirming your surgery date</a></li>
+          <li class="nav-item"><a href="#04" class="link">Checking you are fit for surgery</a></li>
+          <li class="nav-item"><a href="#05" class="link">Getting ready for surgery</a></li>
+          <li class="nav-item"><a href="#06" class="link">Day of your surgery</a></li>
+          <li class="nav-item"><a href="#07" class="link">Going home and recovery</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="grid-2-3">
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="01"></div>
       <h2 class="heading-xlarge">1. Booking a hospital appointment with the surgeon</h2>
       <p>Your GP might book your first appointment with the surgeon for you. If they don’t, you’ll get a letter with a reference number to book online or over the phone.</p>
       <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
+      <p><a href="#" class="button">Visit your GP</a></p>
       
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="02"></div>
       <h2 class="heading-xlarge">2. Seeing a surgeon</h2>
       <p>The surgeon will explain what treatment options you have, and the benefits and risks of surgery. You can ask them any questions. This is the time when you decide if you want to go ahead with the operation.</p>
+      <p><a href="02-seeing-the-surgeon">Seeing the surgeon</a></p>
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="03"></div>
       <h2 class="heading-xlarge">3. Confirming your surgery date</h2>
       <p>After your appointment with the surgeon you’ll get a letter confirming the date of your operation.</p>
       <p>You can change the date but you might have to wait several weeks to get a new one.</p>
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="04"></div>
       <h2 class="heading-xlarge">4. Checking your are fit for surgery</h2>
       <p>If you’re having a general anaesthetic, you’ll have an appointment with a nurse at the hospital to make sure you’re healthy enough for surgery. This is called a pre-operative assessment or pre-op.</p>
       <p>If you’re not healthy enough, the operation may be postponed.</p>
-      <p><a href="#">Preparing for your pre-operative assessment appointment</a></p>
+      <p><a href="04-preparing-for-your-pre-operative-assessment-appointment">Preparing for your pre-operative assessment appointment</a></p>
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="05"></div>
       <h2 class="heading-xlarge">5. Getting ready for surgery</h2>
       <p>The nurse will tell you how to prepare for the operation. You might have to do things like change or stop taking your medicine.</p>
       <p>On the morning of your surgery, you should:</p>
@@ -58,16 +61,16 @@
         <p>On the morning of the surgery you must not eat after midnight, and not drink after 6am.</p>
       </div>
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="06"></div>
       <h2 class="heading-xlarge">6. Day of your surgery</h2>
       <p>When you arrive at the hospital go to the reception desk at your ward. Bring the letter with the confirmation of your surgery date with you.</p>
-      <p><a href="#">The day of your surgery</a></p>
+      <p><a href="06-the-day-of-your-surgery">The day of your surgery</a></p>
 
-      <div class="content-seperator"></div>
+      <div class="content-seperator -grey" id="07"></div>
       <h2 class="heading-xlarge">7. Going home and recovery</h2>
       <p>You can go home when you feel well enough, and can eat and drink. You must be able to walk (if you’re not in a wheelchair), and pee.</p>
       <p>You’ll need someone to help you home by car or taxi and stay with you for at least 24 hours. </p>
-      <p><a href="#">Going home and recovery</a></p>
+      <p><a href="07-help-with-recovery">Going home and recovery</a></p>
 
     </div>
 
