--- a/assets/scss/modules/controls/_buttons.scss
+++ b/assets/scss/modules/controls/_buttons.scss
@@ -5,7 +5,6 @@
   box-sizing: border-box;
   display: inline-block;
   font-family: inherit;
-  font-weight: $boldweight;
   font-size: inherit;
   line-height: $leading*3; /*Do we need a mixin for this  to determine line height based on font height? */
   width: 100%;
@@ -13,9 +12,9 @@
   margin: 0 0 $leading 0;
   text-align: center;
   color: $white;
-  background-color: $green;
+  // background-color: $green;
   cursor: pointer;
-  border: 2px solid $dark-green;
+  border-bottom: 4px solid $green-dark;
   -webkit-appearance: none;
   letter-spacing: 1.000px;
 
@@ -27,6 +26,11 @@
     text-decoration: none;
     color: $white;
     background-color: $green;
+  }
+
+  &:hover{
+     background-color: $green-dark;
+     border-bottom: 4px solid shade($green-dark, 20%);
   }
 
   @include media(mid) {
@@ -45,7 +49,7 @@
 
   &.-cancel {
     background-color: $red;
-    border-color: $red;
+    border-color: $red-dark;
   }
 
   &.-submit-feedback {
@@ -58,5 +62,23 @@
     background-color: $opt-out-button-grey;
     border-color: $opt-out-button-grey;
   }
+
+  &.-back {
+    font-size: 16px;
+    padding: 0 $leading;
+    background-color: $nhs-blue;
+    border: 2px solid tint($nhs-blue, 20%);
+  }
+
+  &.-back:hover{
+     background-color: none;
+     border: 2px solid tint($nhs-blue, 60%);
+  }
+  &.-back:visited {
+    text-decoration: none;
+    color: $white;
+    background-color: none;
+  }
+
 
 }
