--- a/views/google/results.html
+++ b/views/google/results.html
@@ -103,7 +103,7 @@ c&&(c.className+=n);s&&(s.className+=n);}catch(e){}
                       <!--m-->
                       <div class="rc" data-hveid="43">
                         <h3 class="r">
-                          <a href="http://www.nhs.uk/conditions/hernia/Pages/Introduction.aspx">Hernia - NHS.UK</a>
+                          <a href="/condition/hernia">Hernia - NHS.UK</a>
                         </h3>
                         <div class="s">
                           <div>
