--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,11 @@
         <li><a href="/hernia--day-surgery/cover.html">Hernia: Day surgery guide</a></li>
         <li><a href="/joint-replacement--steps-to-surgery/cover.html">Joint replacement: Steps to surgery</a></li>
         <li><a href="/joint-replacement--surgery/cover.html">Joint replacement: Surgery guide</a></li>
-    </ul>    
-     <h3>V3.0</h3>
+    </ul>
+    <h3>V3.0</h3>
     <ul>
+      <li><a href="/google/index">User journey: Google</a></li>
+      <li><a href="/condition/hernia">Condition: hernia</a></li>
       <li><a href="/hernia/guide-surgery">V3.0 - Day surgery guide hernia </a></li>
     </ul>
 
