--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -33,7 +33,7 @@
       <p><a href="#" class="button">Visit your GP</a></p>
 
       <div class="header-prefix">
-        <span>Then about 6 weeks until</span>
+        <span>6 weeks until</span>
       </div>
 
       <h2 class="heading-xlarge" id="02">2. Seeing a surgeon</h2>
@@ -41,7 +41,7 @@
       <p><a href="02-seeing-the-surgeon">Seeing the surgeon</a></p>
 
       <div class="header-prefix">
-        <span>Then about 2 weeks until</span>
+        <span>2 weeks until</span>
       </div>
 
       <h2 class="heading-xlarge" id="03">3. Confirming your surgery date</h2>
@@ -49,7 +49,7 @@
       <p>You can change the date but you might have to wait several weeks to get a new one.</p>
 
       <div class="header-prefix">
-        <span>Then about 3 weeks until</span>
+        <span>3 weeks until</span>
       </div>
 
       <h2 class="heading-xlarge" id="04">4. Checking your are fit for surgery</h2>
@@ -58,7 +58,7 @@
       <p><a href="04-preparing-for-your-pre-operative-assessment-appointment">Preparing for your pre-operative assessment appointment</a></p>
 
       <div class="header-prefix">
-        <span>Then about 2 weeks until</span>
+        <span>2 weeks until</span>
       </div>
 
       <h2 class="heading-xlarge" id="05">5. Getting ready for surgery</h2>
