Revert "Update Frutiger import, remove others"

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,10 @@
 @import "variables/colours";
 
 //Typeface import [hot swappable type!]
+//@import "variables/fs-me";
+//@import "variables/lato";
 @import "variables/frutiger";
+//@import "variables/new-rail";
 
 // controls
 @import "modules/controls/buttons";
