--- a/assets/scss/variables/_frutiger.scss
+++ b/assets/scss/variables/_frutiger.scss
@@ -1,8 +1,6 @@
-@import url('http://fast.fonts.net/cssapi/0985eb4d-eec4-488b-baa4-22fe85c5ce32.css');
-
 $body: 20px;
 $leading: 16px;
-$family: "Frutiger W01", sans-serif;
+$family: "Neue Frutiger W01", sans-serif;
 $lightweight: 200;
 $bodyweight: 400;
 $boldweight: 700;
