--- a/views/_layouts/_layout-default.html
+++ b/views/_layouts/_layout-default.html
@@ -8,6 +8,7 @@
     {% if pagetitle %}{{ pagetitle }} | {% endif %}NHS.UK
   </title>
 
+  <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/50c9c92a-7fe0-4c8b-bd64-c7d3d2fafc87.css"/>
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
