--- a/assets/scss/modules/controls/_buttons.scss
+++ b/assets/scss/modules/controls/_buttons.scss
@@ -14,7 +14,7 @@
   color: $white;
   // background-color: $green;
   cursor: pointer;
-  border-bottom: 4px solid $green-dark;
+  border-bottom: 4px solid $nhs-green-dark;
   -webkit-appearance: none;
   letter-spacing: 1.000px;
 
