--- a/assets/scss/modules/header-local/_header-local.scss
+++ b/assets/scss/modules/header-local/_header-local.scss
@@ -36,9 +36,13 @@
   padding-left: $leading*2;
   padding-right: $leading*2;
   padding-bottom: $leading*2;
+  margin-bottom: 32px;
 
   >.header{
     margin-bottom: $leading*2;
+  }
+  >.precis {
+    font-weight: 200;
   }
 
   >.nav-list{
