--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -7,82 +7,66 @@
 
 <div class="content">
 
-  <div class="grid-row">
-
-    <div class="grid-3-3">
-      <div class="header-panel">
-        <h2 class="header">Hernia</h2>
-        <div class="content-seperator"></div>
-        <h3 class="">A hernia looks like a lump under the skin. It can be different sizes.</h3>
-      </div>
-    </div>
-
+    <div class="grid-row">
+        <div class="grid-3-3">
+            <div class="header-panel">
+                <h2 class="header">Hernia</h2>
+                <div class="content-seperator"></div>
+                <h3 class="precis">A hernia looks like a lump under the skin. It can be different sizes.</h3>
+            </div>
+        </div>
     </div> <!-- end row -->
     
 <div class="grid-row">
-    <div class="grid-2-3">
+    <div class="grid-10-16">
 
-      <div class="header-prefix"></div>
+        <div class="step-guidance">
+            <h2 class="heading-xlarge">When it’s a hernia</h2>
+            <ul class="steps">
+                <li>The lump is in your groin, stomach or thigh.</li>
+                <li>The lump often goes away when you lay down, especially at first.</li>
+                <li>The lump often appears when you cough or strain.</li>
+                <li>You can push the lump back in.</li>
+                <li>You feel a heaviness in your groin.</li>
+            </ul>
+            <div class="call-to-action">
+                <h2 class="heading-large">If you think you have a hernia, speak to a GP.</h2>
+                <p><a href="#" class="button">Visit your GP</a></p>
+            </div> 
+        </div>
 
-      <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
-      <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
+        <div class="image-carousel">
+            <h2 class="heading-xlarge" id="02">What does a hernia look like?</h2>
+            <img src="/images/hernia/hernia-image-module.jpg" />
+        </div>
 
-        <p>You’ll need to have an operation to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
-      <p><a href="types_of_hernia_and_complications">Types of hernia and complications</a></p>
-
-      <div class="header-prefix">
-        <span>2 weeks until</span>
-      </div>
-
-      <h2 class="heading-xlarge" id="03">3. Confirming your surgery date</h2>
-      <p>After your appointment with the surgeon you’ll get a letter confirming the date of your operation.</p>
-      <p>You can change the date but you might have to wait several weeks to get a new one.</p>
-
-      <div class="header-prefix">
-        <span>3 weeks until</span>
-      </div>
-
-      <h2 class="heading-xlarge" id="04">4. Checking your are fit for surgery</h2>
-      <p>If you’re having a general anaesthetic, you’ll have an appointment with a nurse at the hospital to make sure you’re healthy enough for surgery. This is called a pre-operative assessment or pre-op.</p>
-      <p>If you’re not healthy enough, the operation may be postponed.</p>
-      <p><a href="04-preparing-for-your-pre-operative-assessment-appointment">Preparing for your pre-operative assessment appointment</a></p>
-
-      <div class="header-prefix">
-        <span>2 weeks until</span>
-      </div>
-
-      <h2 class="heading-xlarge" id="05">5. Getting ready for surgery</h2>
-      <p>The nurse will tell you how to prepare for the operation. You might have to do things like change or stop taking your medicine.</p>
-      <p>On the morning of your surgery, you should:</p>
-      <ul>
-        <li>have a bath or shower</li>
-        <li>remove all jewellery, including any piercings </li>
-      </ul>
-      <div class="callout notice">
-        <p>On the morning of the surgery you must not eat after midnight, and not drink after 6am.</p>
-      </div>
-
-      <div class="content-seperator -grey" id="06"></div>
-      <h2 class="heading-xlarge">6. Day of your surgery</h2>
-      <p>When you arrive at the hospital go to the reception desk at your ward. Bring the letter with the confirmation of your surgery date with you.</p>
-      <p><a href="06-the-day-of-your-surgery">The day of your surgery</a></p>
-
-      <div class="content-seperator -grey" id="07"></div>
-      <h2 class="heading-xlarge">7. Going home and recovery</h2>
-      <p>You can go home when you feel well enough, and can eat and drink. You must be able to walk (if you’re not in a wheelchair), and pee.</p>
-      <p>You’ll need someone to help you home by car or taxi and stay with you for at least 24 hours. </p>
-      <p><a href="07-help-with-recovery">Going home and recovery</a></p>
+        <div>
+            <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
+            <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
+            <p>You’ll need to have an operation to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
+            <p><a href="types_of_hernia_and_complications">Types of hernia and complications</a></p>
+        </div>
 
     </div>
 
-  </div> <!-- end row -->
+    <div class="grid-6-16">
+        <div class="callout urgent">
+            <h2 class="heading-xlarge headline">See a GP now or go to A&E</h2>
+            <p>If you have a hernia and</p>
+            <ul>
+                <li>it feels hot</li>
+                <li>it becomes hard and tender</li>
+                <li>it’s suddenly painful</li>
+                <li>you have a fever</li>
+                <li>you have blood in your poo</li>
+            </ul>
+            <div class="content-seperator"></div>
+            <p>This could mean you have a <a href="#">strangulated hernia.</a></p>
+        </div>
+    </div>
+
+</div> <!-- end row -->
 
 </div> <!-- content -->
 
 {% endblock %}
-
-
-
-<!-- <p>
-  <a href="/hernia/guide-surgery">Hernia guide link</a>
-</p> -->
