--- a/assets/scss/modules/controls/_buttons.scss
+++ b/assets/scss/modules/controls/_buttons.scss
@@ -65,9 +65,10 @@
 
   &.-back {
     font-size: 16px;
-    padding: 0 $leading;
+    padding: 0 $leading/2;
     background-color: $nhs-blue;
     border: 2px solid tint($nhs-blue, 20%);
+   line-height: $leading*2;
   }
 
   &.-back:hover{
