--- a/assets/scss/modules/display/_image-module.scss
+++ b/assets/scss/modules/display/_image-module.scss
@@ -46,3 +46,11 @@ img {
 .image-carousel {
   margin-bottom: $leading*2;
 }
+
+.no-mobile-image {
+  visibility: hidden;
+
+    @include media(large) {
+    visibility: visible;
+    }
+}
