--- a/assets/scss/variables/_colours.scss
+++ b/assets/scss/variables/_colours.scss
@@ -54,7 +54,7 @@ $feedback-alert-strip: #FFE799;
 // Semantic colour names
 $nhs-blue: $blue;
 
-$page-colour: #F7FCFF;
+$page-colour: #ffffff; //F7FCFF
 
 $header-bottom-margin: $hr-white-30;
 $text-colour: #0b0c0c; //off blacks
