--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -51,7 +51,7 @@
 
     <div class="grid-6-16">
         <div class="callout urgent">
-            <h2 class="heading-xlarge headline">See a GP now or go to A&E</h2>
+            <h2 class="heading-xlarge headline">See a GP now or go to A&amp;E</h2>
             <p>If you have a hernia and</p>
             <ul>
                 <li>it feels hot</li>
