--- a/assets/scss/modules/layout/_grid.scss
+++ b/assets/scss/modules/layout/_grid.scss
@@ -109,8 +109,10 @@ $gutter: 3.4%;
 }
 
 .grid-6-16 {
+  @include media(640px) {
   width: (6.25*6-$gutter);
   float: left;
+  }
 }
 
 .grid-7-16 {
@@ -124,8 +126,10 @@ $gutter: 3.4%;
 }
 
 .grid-10-16 {
-  width: (6.25*10-$gutter);
-  float: left;
+  @include media(640px) {
+    width: (6.25*10-$gutter);
+    float: left;
+  }
 }
 .grid-11-16 {
   width: (6.25*11-$gutter);
