added grey separators

--- a/views/condition/types_of_hernia_and_complications.html
+++ b/views/condition/types_of_hernia_and_complications.html
@@ -26,6 +26,8 @@ Surgery</h2>
             <p>You’re more prone to hernias as you get older.</p>
         </div>
 
+        <div class="content-seperator -grey"></div>
+
         <div>
             <h2 class="heading-xlarge">Types of hernia</h2>
             <p>Different types of hernia develop in different parts of the body.</p>
@@ -49,6 +51,7 @@ Surgery</h2>
             <p>A hiatus hernia happens when part of the stomach pushes into your chest. It may not cause a lump, but it can cause heartburn and a funny taste in your mouth. </p>
         </div>
 
+        <div class="content-seperator -grey"></div>
 
         <div>
             <h2 class="heading-xlarge">Hernia complications</h2>
