adjusted greys for step guidance module

--- a/assets/scss/modules/step-guidance/_step-guidance.scss
+++ b/assets/scss/modules/step-guidance/_step-guidance.scss
@@ -1,5 +1,5 @@
 .step-guidance {
-  background-color: rgba($nhs-grey-light, 0.1);
+  background-color: rgba($nhs-grey-mid, 0.1);
   margin-bottom: $leading*2;
 
   >.heading-xlarge {
@@ -15,7 +15,7 @@
 }
 
 .call-to-action{
-    background-color: rgba($nhs-grey-light, 0.4); 
+    background-color: rgba($nhs-grey-mid, 0.1); 
     padding-left: $leading*2;
     padding-right: $leading*2;
     padding-bottom: 4px;
