--- a/assets/scss/variables/_colours.scss
+++ b/assets/scss/variables/_colours.scss
@@ -27,6 +27,7 @@ $yellow-dark: #cc9316;
 //greys
 $grey: #e6e6e6;
 $nhs-grey-light: #d9e1e2;
+$nhs-grey-mid: #768692;
 $nhs-grey-dark: #425563;
 
 //greens
