--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -38,6 +38,12 @@
         <div class="image-carousel">
             <h2 class="heading-xlarge" id="02">What does a hernia look like?</h2>
             <img src="/images/hernia/hernia-image-module.jpg" />
+            <ul>
+                <li class="selected">Groin</li><!--
+                --><li ><a href="#">Upper thigh</a></li><!--
+                --><li><a href="#">Tummy</a></li><!--
+                --><li><a href="#">Testicle</a></li>
+            </ul>
         </div>
 
         <div>
