--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -31,7 +31,7 @@
             </ul>
             <div class="call-to-action">
                 <h2 class="heading-large">If you think you have a hernia, speak to a GP.</h2>
-                <p><a href="#" class="button">Visit your GP</a></p>
+                <p><a href="#" class="button">Book a GP appointment</a></p>
             </div> 
         </div>
 
