--- a/assets/scss/modules/callout/_callout.scss
+++ b/assets/scss/modules/callout/_callout.scss
@@ -101,7 +101,7 @@
 
 .callout.urgent {
   background-color: rgba($red, 0.1);
-  border-top: $leading/4 solid $red;
+  border-top: $leading/2 solid $red;
   margin-bottom: $leading*2;
 
   >.headline {
@@ -111,7 +111,7 @@
   }
 
   >.content-seperator {
-    background-color: $black;
+    background-color: rgba($nhs-grey-mid, 0.5);
   }
 
   >p {
