--- a/assets/scss/modules/display/_image-module.scss
+++ b/assets/scss/modules/display/_image-module.scss
@@ -59,9 +59,17 @@ img {
     margin:0;
     display: inline-block;
     list-style-type: none;
-    width: 25%;
+    width: 50%;
     padding: $leading 0;
     border-left:1px solid rgba($nhs-grey-mid, 0.5);
+    border-top:1px solid rgba($nhs-grey-mid, 0.5);
+  }
+
+  @include media(mid) {
+    > ul li {
+      width: 25%;
+
+    }
   }
 
   > ul li.selected {
