--- a/views/condition/types_of_hernia_and_complications.html
+++ b/views/condition/types_of_hernia_and_complications.html
@@ -8,11 +8,10 @@
 <div class="content">
 
     <div class="grid-row">
-        <div class="grid-3-3">
+        <div class="grid-16-16">
             <div class="header-panel -no-precis">
                 <a href="hernia" class="button -back">Back</a>
-                <h2 class="header">Types of hernia and complications
-Surgery</h2>
+                <h2 class="header">Types of hernia and complications</h2>
             </div>
         </div>
     </div> <!-- end row -->
@@ -21,7 +20,6 @@ Surgery</h2>
     <div class="grid-10-16">
 
         <div>
-            <h2 class="heading-xlarge">What to do about Hernia</h2>
             <p>A hernia happens when your bowel or fatty tissue pokes through a gap in the muscle. This is because of a weakness in your muscle. It can be something you’re born with or caused by a strain, such as straining on the toilet or being overweight.  </p>
             <p>You’re more prone to hernias as you get older.</p>
         </div>
@@ -41,14 +39,14 @@ Surgery</h2>
 
         <div>
             <h2 class="heading-large">Hernias in the tummy area</h2>
-            <p>An umbilical hernia shows a as a lump near the belly button.  It’s common in babies but can affect adults. </p>
+            <p>An <a href="http://www.nhs.uk/Conditions/UmbilicalHernia/Pages/Whatisitpage.aspx">umbilical hernia</a> shows a as a lump near the belly button.  It’s common in babies but can affect adults. </p>
             <p>An epigastric hernia usually appears between your belly button and your breastbone.</p>
             <p>A spigelian hernia usually appears on the side of your tummy area (below the belly button)</p> 
         </div>
 
         <div>
             <h2 class="heading-large">Hernias in chest</h2>
-            <p>A hiatus hernia happens when part of the stomach pushes into your chest. It may not cause a lump, but it can cause heartburn and a funny taste in your mouth. </p>
+            <p>A <a href="http://www.nhs.uk/Conditions/Hernia-hiatus/Pages/Introduction.aspx">hiatus hernia</a> happens when part of the stomach pushes into your chest. It may not cause a lump, but it can cause heartburn and a funny taste in your mouth. </p>
         </div>
 
         <div class="content-seperator -grey"></div>
@@ -64,8 +62,9 @@ Surgery</h2>
             <h2 class="heading-xlarge headline">See a GP now or go to A&amp;E</h2>
             <p>If you have a hernia and</p>
             <ul>
-                <li>your hernia becomes painful</li>
-                <li>your hernia becomes hot or feels hard and tender</li>
+                <li>its painful</li>
+                <li>it feels hot</li>
+                <li>it feels hard and tender</li>
                 <li>you have a fever</li>
             </ul>
         </div>
