--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -30,10 +30,10 @@
       <h2 class="heading-xlarge" id="01">1. Booking a hospital appointment with the surgeon</h2>
       <p>Your GP might book your first appointment with the surgeon for you. If they don’t, you’ll get a letter with a reference number to book online or over the phone.</p>
       <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
-      <p><a href="#" class="button">Visit your GP</a></p>
+      <p><a href="#" class="button">Book a GP appointment</a></p>
 
       <div class="header-prefix">
-        <span>6 weeks until</span>
+        <span>Approx 6 weeks</span>
       </div>
 
       <h2 class="heading-xlarge" id="02">2. Seeing a surgeon</h2>
@@ -41,7 +41,7 @@
       <p><a href="02-seeing-the-surgeon">Seeing the surgeon</a></p>
 
       <div class="header-prefix">
-        <span>2 weeks until</span>
+        <span>Approx 2 weeks</span>
       </div>
 
       <h2 class="heading-xlarge" id="03">3. Confirming your surgery date</h2>
@@ -49,7 +49,7 @@
       <p>You can change the date but you might have to wait several weeks to get a new one.</p>
 
       <div class="header-prefix">
-        <span>3 weeks until</span>
+        <span>Approx 3 weeks</span>
       </div>
 
       <h2 class="heading-xlarge" id="04">4. Checking your are fit for surgery</h2>
@@ -58,7 +58,7 @@
       <p><a href="04-preparing-for-your-pre-operative-assessment-appointment">Preparing for your pre-operative assessment appointment</a></p>
 
       <div class="header-prefix">
-        <span>2 weeks until</span>
+        <span>Approx 2 weeks</span>
       </div>
 
       <h2 class="heading-xlarge" id="05">5. Getting ready for surgery</h2>
